--- a/CU.html
+++ b/CU.html
@@ -113,11 +113,61 @@
 				<p>2. Organize and led multiple user research and conduct user experience design</p>
 				<p>3. Build up and lead the cross functional team</p>
 			</div>
-			<div class = "img textsolo">
+			<div class = "img video textsolo">
 				<h2>How It Works</h2>
 				<img src="imgs/CU_flow.png" alt = "User Flow">
 			</div>
-			
+			<div class ="textsolo">
+				<h2>Problem</h2>
+				<p>In 2019, there were 369,548 Chinese students who came to the U.S. pursuing higher education. The first challenge they faced is the feeling of helplessness and strangeness in the airport because they were not familiar with local ways of doing business.</p>
+			</div>
+			<div class="textsolo">
+				<h2>Research</h2>
+				<p>Based on our 6 years pickup experience and direct observation, we have found that a number of students have difficulty finding the way to the meeting area. What’s more is that, based on our contextual inquiry with a lot of students, the result shows that International students have two or more baggage items, which are burdensome and bulky. This was especially a big challenge to most female respondents. </p>
+				<p>During my phone interview with 16 interviewees, 9 interviewees reported that they felt nervous during the process especially before they passed customs. Only 3 of 16 were confident in speaking English to strangers.</p>
+				<p>We also brainstormed during meetings and found that most students are only children, and their parents worry when their children go abroad. So, students are used to contacting their parents immediately after arriving.</p>
+			</div>
+			<div class="img video textsolo">
+				<h2>Challenges</h2>
+				<h3>Navigation difficulty</h3>
+				<p>In order to resolve the problem of students getting lost, we developed a map navigation function for use in the airport. Students could find out where to meet the bus and when the bus would depart. We coordinated our volunteers to receive the newly arrived students outside the airport and helped them carry their luggage.</p>
+				<img>
+				<h3>Burdensome luggage</h3>
+				<p>Because international students have two or more bulky luggage items, I make the pages jump off as little as possible, so that users do not need to operate their phone frequently. In addition, considering the user scenario that students may not have two hands to interact with the app, I made the app one hand-operation friendly.</p>
+				<img>
+				<h3>Feeling of nervous</h3>
+				<p>To ease the anxiety of new students and help them find us easily, we developed a contact function. The causes of anxiety are often helplessness and loneliness, and our hope was to provide emotional and mental support through available contacts ready to help the newly arrived students.</p>
+				<img>
+				<h3>Care for students as well as their parents</h3>
+				<p>In addition to new students, we also considered the parents of these students.  Most of the children in China are only children, and parents worry when their children go abroad. Therefore, on the completion page of the service, we developed a sharing function so that the new students could use their own One-click itinerary sharing with family and friends</p>
+				<img>
+			</div>
+
+			<div class="img video textsolo">
+				<h2>Integrate business into human-centered design</h2>
+				<p>Newly arrived students often need to stay in a hotel for a few days when they first arrive at the school because college or school dormitories do not offer immediate check-in upon arrival. These students also need to get cell phone access and bank services in new countries. As a product manager, I hope to integrate commercial interests and human-centered design. I proposed a one-stop service to integrate the hotel service in cooperation with local hotels and the card-issuing service in cooperation with AT&T and Chase on Banner. This not only improves the conversion rate of users, but also allows our team to get more sponsorships. All of this also helps the freshmen get up to speed in adapting to a new way of life.</p>
+				<img>
+			</div>
+
+			<div class ="textsolo">
+				<h2>Next Steps</h2>
+				<p>This project was postponed in 2020 because of the COVID-19. If I were to continue leading the team, I would prioritize the integration of pick-up service, card-issuing service, and hotel service, because it is these three services that builds up the newly arrived students' experience, and this integration is expected to lift up our profit level, we will have more fund operating the organization. </p>
+				<p>In addition, we generally have a high user adoption rate because of our Wechat public account, which gives us a good opportunity to conduct data analysis. But because of COVID-19, we haven’t gotten enough data on the pick-service page. I would build a funnel model to analyze our users and further develop the application if I had more data reports.</p>
+			</div>
+
+			<div class ="textsolo">
+				<h2>Takeaways</h2>
+				<p>I should build a collaborative atmosphere for the team, so that we can maintain our team conflict on a balanced level. </p>
+				<p>Macro management can really help the team achieve goals, because instead of constantly checking the progress with the team, I went to the team member and just asked,” How’s it going? Is there anything I can do to help?” Team members had more self motivation and we built a stronger connection. </p>
+				<p>I should try to balance task oriented style with people oriented style, because it can help the team go long instead of go fast. </p>
+			</div>
+
+			<div class="textsolo">
+				<h2>Posts about the project</h2>
+				<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/">Peace of Mind Programme: Pick-up service</a>
+				<a href="https://mp.weixin.qq.com/s/f9bMJGTllWqdJld_r8s1Kg">全新VITA会员计划及微信小程序 震撼发布</a>
+				<a href="https://mp.weixin.qq.com/s/NGSRut3zqZQtKVMVIWzYVA">CU | 中秋接机,带你回家</a>
+			</div>
 
 		</div>
 
